--- a/EmployeeSQL/Bonus.ipynb
+++ b/EmployeeSQL/Bonus.ipynb
@@ -169,7 +169,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_salaries_df[\"Salary\"].fillna(0, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +188,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Salary</th>\n    </tr>\n    <tr>\n      <th>Count</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>95346</th>\n      <td>40000</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>55581</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>53078</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>53738</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>47454</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>80974</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>105615</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>79895</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>76704</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>86626</td>\n    </tr>\n  </tbody>\n</table>\n<p>50355 rows × 1 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 15
     }
    ],
    "source": [
